# faster-than-light

./: .flake8  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Pipfile  README.md  codecov.yml  mypy.ini  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml
ansible/: Pipfile
ansible/tests/: test_1.py
blog/: 0001-Introduction.ipynb  0002-The Beginning.ipynb  0003-Modules.ipynb  0004-Local-Execution.ipynb  0005-Remote-Execution.ipynb  0006-Performance.ipynb  0007-Performance2.ipynb  Pipfile
blog/results/: remote_0.0.1-9-g155d181.csv
compatibility-test/python-asyncio/: config.py  env  test_1.py  test_builtin.py  test_general.py  util.py
docs/: conf.py  index.rst  make.bat
faster_than_light/: __init__.py  builder.py  cli.py  exceptions.py  gate.py  inventory.py  local.py  message.py  module.py  ref.py  ssh.py  types.py  util.py
faster_than_light/builtin/: debug.py
faster_than_light/ftl_gate/: __main__.py
go/ftl/: ftl.go  ftl_test.go  go.mod
performance-test/ansible/: inventory100.yml  test_1.sh  test_100.sh
performance-test/python-asyncio/: ftl_test_1.sh  ftl_test_10.sh  inventory10.yml  inventory10000.yml  perf_test.py  run_perf.sh  test_100.sh
performance-test/scripts/: generate_inventory.py  inventory1000.yml  perf_test.py
python-asyncio/faster_than_light/: .gitignore  LICENSE  Makefile  Pipfile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
python-asyncio/faster_than_light/.github/: ISSUE_TEMPLATE.md
python-asyncio/faster_than_light/docs/: Makefile  installation.rst  usage.rst
python-asyncio/faster_than_light/faster_than_light/: __init__.py  builder.py  cli.py  exceptions.py  gate.py  inventory.py  local.py  message.py  module.py  receptor.py  ssh.py  types.py  util.py
python-asyncio/faster_than_light/faster_than_light/builtin/: debug.py
python-asyncio/faster_than_light/faster_than_light/ftl_gate/: __main__.py
python-asyncio/faster_than_light/tests/: inventory3.yml  test_1.py  test_cli.py  test_ftl_gate.py  test_inventory.py  test_util.py
python-asyncio/faster_than_light/tests/ftl_gate/: __main__.py
python-asyncio/faster_than_light/tests/ftl_modules/: timetest.py
python-asyncio/faster_than_light/tests/modules/: .gitignore  bad_output.py  new_style.py  want_json.py
tests/: __init__.py  test_1.py  test_builder_comprehensive.py  test_cli.py  test_cli_comprehensive.py  test_exceptions_simple.py  test_ftl_gate.py  test_ftl_gate_main_comprehensive.py  test_gate_comprehensive.py  test_inventory.py  test_inventory_comprehensive.py  test_local_comprehensive.py  test_message_comprehensive.py  test_module_comprehensive.py  test_ref_comprehensive.py  test_ssh_minimal.py  test_types_comprehensive.py  test_util.py  test_util_comprehensive.py
tests/modules/: argtest.py  (+6 more)
(+51 files in other folders)
