[project]
name = "faster_than_light"
version = "0.2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache 2.0 License",
    "Programming Language :: Python :: 3.13",
]
description = "Experimental library for extremely fast, parallelized, and distributed automation."
authors = [{name = "Ben Thomasson", email = "ben.thomasson@gmail.com"}]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ 'asyncssh',
                 'importlib_resources',
                 'pyyaml',
                 'docopt',
                 'click',
                 'pip',
                 'wheel',
                 'aiomultiprocess',
                 'jinja2',
]

[project.urls]
Homepage = "https://github.com/benthomasson/faster-than-light"
Repository = "https://github.com/benthomasson/faster-than-light.git"
Issues = "https://github.com/benthomasson/faster-than-light/issues"

[project.optional-dependencies]
dev = ["pytest>=6.0", "black", "isort", "mypy", "ruff"]
docs = ["sphinx", "sphinx-rtd-theme"]

[tool.setuptools]
packages = ["faster_than_light", "faster_than_light.ftl_gate"]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project.scripts]
ftl = "faster_than_light.cli:entry_point"
ftl-gate-builder = "faster_than_light.builder:entry_point"
ftl-localhost = "faster_than_light.inventory:entry_point"
